kubernetes/clusters/hyperion/authentik/components/ingress/ingress-strawslabs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-strawslabs
  namespace: security
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "authentik-hyperion.strawslabs.com"
      secretName: authentik-cert-strawslabs-tls
  rules:
    - host: "authentik-hyperion.strawslabs.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
